Bug 15220 - Heimdal build on 32-bit FreeBSD fails
Summary: Heimdal build on 32-bit FreeBSD fails
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.17.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
: 15068 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-01 02:43 UTC by Andrew Bartlett
Modified: 2022-12-15 16:34 UTC (History)
3 users (show)

See Also:


Attachments
patch for Samba 4.16 (4.60 KB, patch)
2022-11-03 00:55 UTC, Joseph Sutton
abartlet: review+
jsutton: ci-passed+
Details
patch for Samba 4.17 (4.60 KB, patch)
2022-11-03 01:57 UTC, Joseph Sutton
abartlet: review+
jsutton: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2022-11-01 02:43:17 UTC

    
Comment 1 Samba QA Contact 2022-11-02 05:22:04 UTC
This bug was referenced in samba master:

ab4c7bda8daccdb99adaf6ec7fddf8b5f84be09a
Comment 2 Joseph Sutton 2022-11-03 00:55:32 UTC
Created attachment 17613 [details]
patch for Samba 4.16
Comment 3 Joseph Sutton 2022-11-03 01:57:49 UTC
Created attachment 17615 [details]
patch for Samba 4.17
Comment 4 Andrew Bartlett 2022-11-08 07:36:09 UTC
Assigning to Jule for Samba 4.16 and 4.17.
Comment 5 Jule Anger 2022-11-08 08:05:36 UTC
Pushed to autobuild-v4-{17,16}-test.
Comment 6 Samba QA Contact 2022-11-08 09:24:04 UTC
This bug was referenced in samba v4-17-test:

b1cf93f7a48e94a77c0429c90d3a2163f994ccaf
Comment 7 Samba QA Contact 2022-11-08 14:10:12 UTC
This bug was referenced in samba v4-16-test:

b57c2bb47256903bf2b88f6c1b66d540578ba619
Comment 8 Jule Anger 2022-11-08 17:15:05 UTC
Closing out bug report.

Thanks!
Comment 9 Stefan Metzmacher 2022-11-22 09:00:39 UTC
*** Bug 15068 has been marked as a duplicate of this bug. ***
Comment 10 Samba QA Contact 2022-12-15 16:32:44 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.8):

b57c2bb47256903bf2b88f6c1b66d540578ba619
Comment 11 Samba QA Contact 2022-12-15 16:34:03 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.4):

b1cf93f7a48e94a77c0429c90d3a2163f994ccaf