third_party/heimdal/lib/krb5/ticket.c
@@ -897,7 +897,7 @@ _krb5_extract_ticket(krb5_context context,
 	ret = KRB5KRB_AP_ERR_SKEW;
 	krb5_set_error_message (context, ret,
 				N_("time skew (%ld) larger than max (%ld)", ""),
-			       krb5_time_abs(tmp_time, sec_now),
+			       (long)krb5_time_abs(tmp_time, sec_now),
 			       (long)context->max_skew);
 	goto out;
     }
